--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-ide-helper": "^2.2",
-        "orangehill/iseed": "dev-master"
+        "orangehill/iseed": "dev-master",
+        "mpociot/laravel-apidoc-generator": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
