增加忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Homestead.json
 .env
 /_ide_helper.php
 .phpstorm.meta.php
+/storage/logs/*
+/storage/framework/views/*
+/storage/framework/sessions/*
+!.gitkeep
